- Document strict route now requires unique required-marker cardinality for OOXML inputs (`[Content_Types].xml` and the primary-part path must each appear exactly once), preventing duplicate/ambiguous OOXML marker sets from passing strict routing.
- Document strict route now requires type-specific OOXML relationship evidence (`word/_rels/document.xml.rels` for `.docm`, `xl/_rels/workbook.xml.rels` for `.xlsm`, or root `_rels/.rels`), preventing cross-type relationship markers from passing strict routing.
- Document strict route now requires non-ambiguous OOXML relationship marker cardinality (duplicate root/type-specific relationship markers fail closed), preventing duplicate relationship-marker ambiguity from passing strict routing.
- Document strict route now requires a strict RTF prolog (`{\\rtf1`), baseline control-word evidence (`\\ansi`/`\\deff`), and closing-brace evidence for explicit `.rtf` analysis, preventing partial/plaintext placeholders from passing strict document routing.
- Document strict route now requires minimum CHM structural header evidence (including header-length sanity) for explicit `.chm` analysis, preventing tiny header-only placeholders from passing strict document routing.
- IaC/CI adapter extraction deepened:
- Deterministic action reference parsing now distinguishes pinned commit/digest refs from unpinned refs.
- Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
- Explicit `cicd` route now requires CI structure/signals (not filename/path hints alone), failing closed on path-hint-only placeholders.
- Adapter `auto` classification now treats CI structure/action references as CI evidence, so valid pinned workflows classify as `cicd` instead of falling back to `iac`.
- Explicit `iac` route now requires IaC structural signals; CI-style workflow content with generic secret terms no longer passes strict IaC routing.
- Container adapter extraction deepened: